<resources>
    <string name="app_name">MyCalc</string>
    <string name="title_activity_advanced">AdvancedActivity</string>
    <string name="item1">Advanced</string>
    <string name="item2">Settings</string>
    <string name="item3">History</string>
    <string name="item4">Function</string>
    <string name="title_activity_history">History</string>
    <string name="_clean">C</string>
    <string name="_back">←</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_mod">%</string>
    <string name="_div">÷</string>
    <string name="_mul">*</string>
    <string name="_add">+</string>
    <string name="_sub">-</string>
    <string name="_br">( )</string>
    <string name="_dot">.</string>
    <string name="_eq">=</string>
    <string name="_abs">|x|</string>
    <string name="_1_x">1/x</string>
    <string name="_fact">x!</string>
    <string name="_sqr">x<sup><small><ex>2</ex></small></sup></string>
    <string name="_sqrt">√x</string>
    <string name="_pow">x<sup><small><ex>y</ex></small></sup></string>
    <string name="_10_x">10<sup><small><ex>x</ex></small></sup></string>
    <string name="_raddeg">Rad</string>
    <string name="_e">e</string>
    <string name="_pi">π</string>
    <string name="_sin">sin</string>
    <string name="_cos">cos</string>
    <string name="_tan">tan</string>
    <string name="_ln">ln</string>
    <string name="_lg">lg</string>
    <string name="_sh">sinh</string>
    <string name="_ch">cosh</string>
    <string name="_th">tanh</string>
    <string name="_2_x">2<sup><small><ex>x</ex></small></sup></string>
    <string name="_sec">sec</string>
    <string name="_cosec">cosec</string>
    <string name="_e_x">e<sup><small><ex>x</ex></small></sup></string>
    <string name="_ex">x</string>
    <string name="_func"><b><i>f(x)=</i></b></string>
    <string name="_var"><b><i>x=</i></b></string>
</resources>
