<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nadya.mycalc.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100">

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/infoTextView"
                android:lines="4"
                android:maxLines="4"
                android:textSize="50sp"
                android:inputType="none"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonClear"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_clean"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonBack"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_back"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonPers"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_mod"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonDivide"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_div"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonSeven"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonEight"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonNine"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_mul"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonFour"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_4"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buttonFive"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSix"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonAdd"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_add"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonOne"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_1"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/buttonTwo"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_2"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonThree"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSubstract"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_sub"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonBraces"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_br"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonZero"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_0"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonDot"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_dot"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonEqual"
                style="@android:style/Widget.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/_eq"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
