<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nadya.mycalc.AdvancedActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="20"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/infoDegRad"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:text="@string/_raddeg"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100">

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/infoTextView"
                android:layout_weight="0"
                android:lines="3"
                android:maxLines="3"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonClear"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_clean"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/buttonBack"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_back"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonClear"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/buttonExp"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_e"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonBack"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/buttonPi"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_pi"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/buttonAbs"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_abs"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/editText" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonSin"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_sin"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonSqrt"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_sqrt"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonSin"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonSqr"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_sqr"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonSqrt"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonPow"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_pow"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonSquare"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonDivide"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_div"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15">

            <Button
                android:id="@+id/buttonCos"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_cos"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonSeven"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_7"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonCos"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonEight"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_8"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonSeven"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonNine"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_9"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonEight"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />


            <Button
                android:id="@+id/buttonMultiply"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_mul"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonTan"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_tan"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonFour"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_4"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonTan"
                app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

            <Button
                android:id="@+id/buttonFive"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_5"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonFour"
                app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

            <Button
                android:id="@+id/buttonSix"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_6"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonFive"
                app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

            <Button
                android:id="@+id/buttonAdd"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_add"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonSix"
                app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonLn"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_ln"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonOne"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_1"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonLn"
                app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

            <Button
                android:id="@+id/buttonTwo"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_2"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonOne"
                app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

            <Button
                android:id="@+id/buttonThree"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_3"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonTwo"
                app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

            <Button
                android:id="@+id/buttonSubstract"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_sub"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonTwo"
                app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <Button
                android:id="@+id/buttonLg"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/_lg"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

            <Button
                android:id="@+id/buttonBraces"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_br"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonLg"
                app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

            <Button
                android:id="@+id/buttonZero"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_0"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonBraces"
                app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

            <Button
                android:id="@+id/buttonDot"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/_dot"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonZero"
                app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

            <Button
                android:id="@+id/buttonEqual"
                style="@android:style/Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/_eq"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/buttonDot"
                app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
